// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Route /> should create new instance when notified 1`] = `
<Route
  component={[Function]}
  path="category/:id"
>
  <div
    data-route-path="category/:id"
  >
    <pure(Component)
      params={
        Object {
          "id": 123,
        }
      }
      setComponentRef={[Function]}
      setRef={[Function]}
    >
      <div>
        <MockComponent
          params={
            Object {
              "id": 123,
            }
          }
        />
      </div>
    </pure(Component)>
  </div>
</Route>
`;

exports[`<Route /> should keep two components when going forward 1`] = `
<Route
  component={[Function]}
  path="category/:id"
>
  <div
    data-route-path="category/:id"
  >
    <pure(Component)
      params={
        Object {
          "id": 123,
        }
      }
      setComponentRef={[Function]}
      setRef={[Function]}
    >
      <div>
        <MockComponent
          params={
            Object {
              "id": 123,
            }
          }
        />
      </div>
    </pure(Component)>
    <pure(Component)
      params={
        Object {
          "id": 456,
        }
      }
      setComponentRef={[Function]}
      setRef={[Function]}
    >
      <div>
        <MockComponent
          params={
            Object {
              "id": 456,
            }
          }
        />
      </div>
    </pure(Component)>
  </div>
</Route>
`;

exports[`<Route /> should register with Router in context 1`] = `
<Route
  component={[Function]}
  path="category/:id"
>
  <div
    data-route-path="category/:id"
  />
</Route>
`;

exports[`<Route /> should remove route instance when going back 1`] = `
<Route
  component={[Function]}
  path="category/:id"
>
  <div
    data-route-path="category/:id"
  >
    <pure(Component)
      params={
        Object {
          "id": 456,
        }
      }
      setComponentRef={[Function]}
      setRef={[Function]}
    >
      <div>
        <MockComponent
          params={
            Object {
              "id": 456,
            }
          }
        />
      </div>
    </pure(Component)>
  </div>
</Route>
`;
